--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "seed": "node ./db/seeds/run-seed.js",
     "demo": "node ./db/seeds/run-test-seed.js && node listen.js",
     "test": "jest"
+    
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "devDependencies": {
     "jest": "^27.3.1",
+    "jest-sorted": "^1.0.12",
     "supertest": "^6.1.6"
   },
   "dependencies": {
@@ -29,5 +31,9 @@
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "pg-format": "^1.0.4"
+  },
+    "jest": {
+    "setupFilesAfterEnv": ["jest-sorted"]
   }
+ 
 }
