--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
     "seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed",
-    "start": "node listen.js"
+    "start": "node listen.js",
+    "test-insomnia": "NODE_ENV=test npm run seed && node listen.js"
   },
   "repository": {
     "type": "git",
