--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "supertest": "^6.1.6"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "pg-format": "^1.0.4"
   },
-    "jest": {
-    "setupFilesAfterEnv": ["jest-sorted"]
+  "jest": {
+    "setupFilesAfterEnv": [
+      "jest-sorted"
+    ]
   }
- 
 }
